Added Jquery developer version as third party module

--- a/appConfig.json
+++ b/appConfig.json
@@ -1,4 +1,4 @@
 {
-  "applicationModules": ["constructorsandclasses"],
-  "thirdPartyModules": ["lodashModule"]
+  "applicationModules": [""],
+  "thirdPartyModules": ["lodashModule", "jQueryModule"]
 }
